@@ -44,6 +44,8 @@ public class RunController {
         startTimer();
         setListViewListener();
         initButtons();
+
+
     }
 
 
@@ -108,7 +110,7 @@ public class RunController {
             }
         });
         if (!listView.getItems().isEmpty()) {;
-            showRunningPane(listView.getItems().getFirst());
+            showRunningPane(listView.getItems().get(0));
         }
     }
 
